force-app/main/default/objects/CTA__c/fields/Follow_up_action__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_action__c</fullName>
    <label>Follow-up action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Distributor feedback awaited</fullName>
            </value>
            <value>
                <fullName>Engineer feedback awaited</fullName>
            </value>
            <value>
                <fullName>Customer feedback awaited</fullName>
            </value>
            <value>
                <fullName>IST action needed – callback</fullName>
            </value>
            <value>
                <fullName>IST action needed – follow-up for order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>