force-app/main/default/objects/CTA__c/fields/Follow_up_due_date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_due_date__c</fullName>
    <label>Follow-up due date</label>
    <type>Date</type>
</CustomField>