force-app/main/default/objects/CTA__c/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <label>From Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>