force-app/main/default/objects/CTA__c/fields/GM_Design_Guide_Name__c.field-meta.xml
<CustomField>
    <fullName>GM_Design_Guide_Name__c</fullName>
    <label>GM Design Guide Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>