force-app/main/default/objects/CTA__c/fields/GM_Form_Type__c.field-meta.xml
<CustomField>
    <fullName>GM_Form_Type__c</fullName>
    <label>GM Form Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>