force-app/main/default/objects/CTA__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <formula>IF(  Customer_Contact__r.Grade__c &lt;&gt; Null,Customer_Contact__r.Grade__c,Lead__r.Grade__c )</formula>
    <label>Grade</label>
    <type>Text</type>
</CustomField>