force-app/main/default/objects/CTA__c/fields/GST_Price__c.field-meta.xml
<CustomField>
    <fullName>GST_Price__c</fullName>
    <description>Quotation Price</description>
    <label>GST Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>