force-app/main/default/objects/CTA__c/fields/High_Potential__c.field-meta.xml
<CustomField>
    <fullName>High_Potential__c</fullName>
    <formula>IF((( Adhesive_Potential_Basis_Annual_Turnover__c  * 0.1) / 100)  &gt;=  200000, True, False)</formula>
    <label>High Potential</label>
    <type>Checkbox</type>
</CustomField>