force-app/main/default/objects/CTA__c/fields/Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Hot_Lead__c</fullName>
    <label>Hot Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>