force-app/main/default/objects/CTA__c/fields/How_much_do_they_manufacture__c.field-meta.xml
<CustomField>
    <fullName>How_much_do_they_manufacture__c</fullName>
    <description>Research inputs – End customer</description>
    <inlineHelpText>Research inputs – End customer</inlineHelpText>
    <label>How much do they manufacture?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>