force-app/main/default/objects/CTA__c/fields/IM_Status__c.field-meta.xml
<CustomField>
    <fullName>IM_Status__c</fullName>
    <label>Type of lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>More information on products</fullName>
            </value>
            <value>
                <fullName>Intent to buy</fullName>
            </value>
            <value>
                <fullName>Sample Requested</fullName>
            </value>
            <value>
                <fullName>Not able to contact</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>