force-app/main/default/objects/CTA__c/fields/Import_throught_dataloader__c.field-meta.xml
<CustomField>
    <fullName>Import_throught_dataloader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import throught dataloader</label>
    <type>Checkbox</type>
</CustomField>