force-app/main/default/objects/CTA__c/fields/Indiamart_ID__c.field-meta.xml
<CustomField>
    <fullName>Indiamart_ID__c</fullName>
    <externalId>true</externalId>
    <label>Indiamart ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>