force-app/main/default/objects/CTA__c/fields/Indiamart_Member_Since__c.field-meta.xml
<CustomField>
    <fullName>Indiamart_Member_Since__c</fullName>
    <label>Indiamart Member Since</label>
    <length>40</length>
    <type>Text</type>
</CustomField>