force-app/main/default/objects/CTA__c/fields/Indiamart_QTYPE__c.field-meta.xml
<CustomField>
    <fullName>Indiamart_QTYPE__c</fullName>
    <label>Indiamart Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact Suppliers</fullName>
            </value>
            <value>
                <fullName>PNS</fullName>
            </value>
            <value>
                <fullName>Buy Leads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>