force-app/main/default/objects/CTA__c/fields/Industrial_annual_turnover__c.field-meta.xml
<CustomField>
    <fullName>Industrial_annual_turnover__c</fullName>
    <description>Research inputs – traders</description>
    <inlineHelpText>Research inputs – traders</inlineHelpText>
    <label>Industrial annual turnover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>