force-app/main/default/objects/CTA__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>IF( Customer_Contact__r.Industry_value__c &lt;&gt; Null ,Customer_Contact__r.Industry_value__c ,TEXT( Lead__r.Industry ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry</label>
    <type>Text</type>
</CustomField>