force-app/main/default/objects/CTA__c/fields/Industry_priority__c.field-meta.xml
<CustomField>
    <fullName>Industry_priority__c</fullName>
    <formula>IF( Customer_Contact__r.Industry_priority__c  &lt;&gt; Null,Customer_Contact__r.Industry_priority__c,Lead__r.Industry_priority__c)</formula>
    <label>Industry priority</label>
    <type>Text</type>
</CustomField>