force-app/main/default/objects/CTA__c/fields/Intends_to_place_an_order_request__c.field-meta.xml
<CustomField>
    <fullName>Intends_to_place_an_order_request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intends to place an order request</label>
    <type>Checkbox</type>
</CustomField>