force-app/main/default/objects/CTA__c/fields/Intends_to_speak_to_IST_at_a_later_date__c.field-meta.xml
<CustomField>
    <fullName>Intends_to_speak_to_IST_at_a_later_date__c</fullName>
    <label>Intends to speak to IST at a later date</label>
    <type>Date</type>
</CustomField>