force-app/main/default/objects/CTA__c/fields/Intends_to_speak_to_LOCTITE__c.field-meta.xml
<CustomField>
    <fullName>Intends_to_speak_to_LOCTITE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intends to speak to LOCTITE</label>
    <type>Checkbox</type>
</CustomField>