force-app/main/default/objects/CTA__c/fields/Intent_validation__c.field-meta.xml
<CustomField>
    <fullName>Intent_validation__c</fullName>
    <description>intent validation at the stage data &amp; intent validation</description>
    <label>Intent validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Callback1</fullName>
            </value>
            <value>
                <fullName>Callback2</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Noco</fullName>
            </value>
            <value>
                <fullName>Duplicate enquiry</fullName>
            </value>
            <value>
                <fullName>Intends to speak to IST now</fullName>
            </value>
            <value>
                <fullName>Intends to speak to IST at a later date (date for speaking to IST)</fullName>
            </value>
            <value>
                <fullName>Does not want to speak to IST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>