force-app/main/default/objects/CTA__c/fields/Is_it_a_focus_industry__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_focus_industry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it a focus industry and has definitive possibility of LOCTITE applications</description>
    <inlineHelpText>Is it a focus industry and has definitive possibility of LOCTITE applications</inlineHelpText>
    <label>Is it a focus industry</label>
    <type>Checkbox</type>
</CustomField>