force-app/main/default/objects/CTA__c/fields/Is_Live_Webinar_Attended__c.field-meta.xml
<CustomField>
    <fullName>Is_Live_Webinar_Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Live Webinar Attended?</label>
    <type>Checkbox</type>
</CustomField>