force-app/main/default/objects/CTA__c/fields/Is_Webinar_Attended__c.field-meta.xml
<CustomField>
    <fullName>Is_Webinar_Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Webinar Attended</label>
    <type>Checkbox</type>
</CustomField>