force-app/main/default/objects/CTA__c/fields/IST_qualification_for_customer_intent__c.field-meta.xml
<CustomField>
    <fullName>IST_qualification_for_customer_intent__c</fullName>
    <label>IST qualification for customer intent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer interested in a visit</fullName>
            </value>
            <value>
                <fullName>Customer interested in a seminar (LMX/MRW/Plant audit)</fullName>
            </value>
            <value>
                <fullName>Customer is from a relevant company but neither decision maker nor influencer</fullName>
            </value>
            <value>
                <fullName>Customer is from a relevant company and is either a decision maker or influencer but is currently not showing much interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>