force-app/main/default/objects/CTA__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <formula>IF(  TEXT(Lead__r.Job_Title__c)  &lt;&gt; Null ,TEXT(Lead__r.Job_Title__c) ,   TEXT(Customer_Contact__r.Job_Title__c)  )</formula>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>