force-app/main/default/objects/CTA__c/fields/Last_click_campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_click_campaign__c</fullName>
    <formula>IF( ISBLANK( Customer_Contact__r.gaconnector_Last_Click_Campaign__c )==False , Customer_Contact__r.gaconnector_Last_Click_Campaign__c, Lead__r.gaconnector_Last_Click_Campaign__c)</formula>
    <label>Last click campaign</label>
    <type>Text</type>
</CustomField>