force-app/main/default/objects/CTA__c/fields/Last_click_source__c.field-meta.xml
<CustomField>
    <fullName>Last_click_source__c</fullName>
    <formula>IF(ISBLANK( Customer_Contact__r.gaconnector_Last_Click_Source__c )==False , Customer_Contact__r.gaconnector_Last_Click_Source__c, Lead__r.gaconnector_Last_Click_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last click source</label>
    <type>Text</type>
</CustomField>