force-app/main/default/objects/CTA__c/fields/Last_eCommerce_qualification_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_eCommerce_qualification_Change_Date__c</fullName>
    <description>Ecommerce Qualification Change DateTime is captured here</description>
    <label>Last eCommerce qualification Change Date</label>
    <type>DateTime</type>
</CustomField>