force-app/main/default/objects/CTA__c/fields/Lead_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Lead_Bucket__c</fullName>
    <label>Lead Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternate trial Required</fullName>
            </value>
            <value>
                <fullName>Awaiting Invoice</fullName>
            </value>
            <value>
                <fullName>Contractor/Consultants</fullName>
            </value>
            <value>
                <fullName>Customer has no current requirement</fullName>
            </value>
            <value>
                <fullName>Customer not responding</fullName>
            </value>
            <value>
                <fullName>Huge Lead</fullName>
            </value>
            <value>
                <fullName>Lead dropped due to high Price of our product</fullName>
            </value>
            <value>
                <fullName>Not a promising lead</fullName>
            </value>
            <value>
                <fullName>Personal Use Leads</fullName>
            </value>
            <value>
                <fullName>Promising Lead</fullName>
            </value>
            <value>
                <fullName>Purchased from Trader</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
            <value>
                <fullName>Trial On Hold</fullName>
            </value>
            <value>
                <fullName>Trial Successful- Customer Awaiting Henkel Support</fullName>
            </value>
            <value>
                <fullName>Trial Successful- Henkel Awaiting Customer Order</fullName>
            </value>
            <value>
                <fullName>Product not in our range</fullName>
            </value>
            <value>
                <fullName>eCommerce lead with no further scope</fullName>
            </value>
            <value>
                <fullName>Additional contact for ACE project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>