force-app/main/default/objects/CTA__c/fields/lead_classification_basis_purpose__c.field-meta.xml
<CustomField>
    <fullName>lead_classification_basis_purpose__c</fullName>
    <formula>Lead__r.Lead_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>lead classification basis purpose</label>
    <type>Text</type>
</CustomField>