force-app/main/default/objects/CTA__c/fields/Lead_classification_basis_value__c.field-meta.xml
<CustomField>
    <fullName>Lead_classification_basis_value__c</fullName>
    <formula>IF( Customer_Contact__r.Lead_classification_basis_value__c  &lt;&gt; Null,Customer_Contact__r.Lead_classification_basis_value__c,Lead__r.Lead_classification_basis_value__c   )</formula>
    <label>Lead classification basis value</label>
    <type>Text</type>
</CustomField>