force-app/main/default/objects/CTA__c/fields/Lead_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Modified_Date__c</fullName>
    <formula>Lead__r.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Modified Date</label>
    <type>DateTime</type>
</CustomField>