force-app/main/default/objects/CTA__c/fields/Lead_shared_with_TSE_on__c.field-meta.xml
<CustomField>
    <fullName>Lead_shared_with_TSE_on__c</fullName>
    <label>Lead shared with TSE on</label>
    <type>Date</type>
</CustomField>