force-app/main/default/objects/CTA__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <formula>IF(ISBLANK(TEXT(Customer_Contact__r.LeadSource))==False  , TEXT(Customer_Contact__r.LeadSource) ,TEXT(Lead__r.LeadSource))</formula>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>