force-app/main/default/objects/CTA__c/fields/Lead_Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sr_No__c</fullName>
    <formula>Lead__r.Lead_Sr_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Sr. No.</label>
    <type>Text</type>
</CustomField>