force-app/main/default/objects/CTA__c/fields/LOG_TIME__c.field-meta.xml
<CustomField>
    <fullName>LOG_TIME__c</fullName>
    <label>LOG TIME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>