force-app/main/default/objects/CTA__c/fields/Logistic_partner__c.field-meta.xml
<CustomField>
    <fullName>Logistic_partner__c</fullName>
    <label>Logistic partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>