force-app/main/default/objects/CTA__c/fields/Mail_Enquiry_Message__c.field-meta.xml
<CustomField>
    <fullName>Mail_Enquiry_Message__c</fullName>
    <label>Enquiry Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>