force-app/main/default/objects/CTA__c/fields/Mail_Enquiry_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Mail_Enquiry_Reminder_Date__c</fullName>
    <description>One day after created Date for Mail Enquiry CTA</description>
    <label>Mail Enquiry Reminder Date</label>
    <type>DateTime</type>
</CustomField>