force-app/main/default/objects/CTA__c/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>MRO</fullName>
            </value>
            <value>
                <fullName>VRM</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>