force-app/main/default/objects/CTA__c/fields/MOBILE_ALT__c.field-meta.xml
<CustomField>
    <fullName>MOBILE_ALT__c</fullName>
    <description>Indiamart Related</description>
    <label>MOBILE_ALT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>