force-app/main/default/objects/CTA__c/fields/New_Existing__c.field-meta.xml
<CustomField>
    <fullName>New_Existing__c</fullName>
    <label>New/Existing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing customer &amp; existing application</fullName>
            </value>
            <value>
                <fullName>Existing customer &amp; new application</fullName>
            </value>
            <value>
                <fullName>New customer – competitor adhesive</fullName>
            </value>
            <value>
                <fullName>New customer – conventional method</fullName>
            </value>
            <value>
                <fullName>personal use</fullName>
            </value>
            <value>
                <fullName>Trader – Competitor adhesives</fullName>
            </value>
            <value>
                <fullName>Trader – Henkel products</fullName>
            </value>
            <value>
                <fullName>New customer – No current method</fullName>
            </value>
            <value>
                <fullName>Irrelevant Segment</fullName>
            </value>
            <value>
                <fullName>Uncconectable</fullName>
            </value>
            <value>
                <fullName>Local to Authorized distributor</fullName>
            </value>
            <value>
                <fullName>Bought from eCommerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>