force-app/main/default/objects/CTA__c/fields/Number_Of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Employees__c</fullName>
    <formula>IF(  TEXT(Customer_Contact__r.Number_of_Employees_Custom__c)&lt;&gt; Null ,TEXT(Customer_Contact__r.Number_of_Employees_Custom__c),TEXT( Lead__r.Number_of_Employees_Custom__c ))</formula>
    <label>Number Of Employees</label>
    <type>Text</type>
</CustomField>