force-app/main/default/objects/CTA__c/fields/Old_CTA_Owner_Updated__c.field-meta.xml
<CustomField>
    <fullName>Old_CTA_Owner_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old CTA Owner Updated</label>
    <type>Checkbox</type>
</CustomField>