force-app/main/default/objects/CTA__c/fields/Old_CTA_Status__c.field-meta.xml
<CustomField>
    <fullName>Old_CTA_Status__c</fullName>
    <label>Old CTA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>