force-app/main/default/objects/CTA__c/fields/Old_project_research_inputs__c.field-meta.xml
<CustomField>
    <fullName>Old_project_research_inputs__c</fullName>
    <label>Old project research inputs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>