force-app/main/default/objects/CTA__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>