force-app/main/default/objects/CTA__c/fields/ORG_SENDER_GLUSR_ID__c.field-meta.xml
<CustomField>
    <fullName>ORG_SENDER_GLUSR_ID__c</fullName>
    <description>Indiamart Related</description>
    <label>ORG_SENDER_GLUSR_ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>