force-app/main/default/objects/CTA__c/fields/Other_comments_2_customer__c.field-meta.xml
<CustomField>
    <fullName>Other_comments_2_customer__c</fullName>
    <description>Research inputs – End customer</description>
    <inlineHelpText>Research inputs – End customer</inlineHelpText>
    <label>Other comments 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>