force-app/main/default/objects/CTA__c/fields/Other_Comments_2_trader__c.field-meta.xml
<CustomField>
    <fullName>Other_Comments_2_trader__c</fullName>
    <description>Research inputs – traders</description>
    <inlineHelpText>Research inputs – traders</inlineHelpText>
    <label>Other comments 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>