force-app/main/default/objects/CTA__c/fields/Other_comments_on_sample_dispatch__c.field-meta.xml
<CustomField>
    <fullName>Other_comments_on_sample_dispatch__c</fullName>
    <label>Other comments on sample dispatch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>