force-app/main/default/objects/CTA__c/fields/Pardot_Score__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Score__c</fullName>
    <formula>IF( ISBLANK(Customer_Contact__r.pi__score__c)=False ,Customer_Contact__r.pi__score__c,Lead__r.pi__score__c )</formula>
    <label>Pardot Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>