force-app/main/default/objects/CTA__c/fields/PHONE_ALT__c.field-meta.xml
<CustomField>
    <fullName>PHONE_ALT__c</fullName>
    <description>Indiamart Related</description>
    <label>PHONE_ALT</label>
    <type>Phone</type>
</CustomField>