force-app/main/default/objects/CTA__c/fields/Pick_up_date__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_date__c</fullName>
    <label>Pick up date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>