force-app/main/default/objects/CTA__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <formula>IF(  ISBLANK(Lead__r.PostalCode)==False ,Lead__r.PostalCode, Customer_Contact__r.MailingPostalCode )</formula>
    <label>Pincode</label>
    <type>Text</type>
</CustomField>