force-app/main/default/objects/CTA__c/fields/Potential_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Potential_Distributor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Distributor</label>
    <type>Checkbox</type>
</CustomField>