force-app/main/default/objects/CTA__c/fields/Product_In_Ace_Project__c.field-meta.xml
<CustomField>
    <fullName>Product_In_Ace_Project__c</fullName>
    <description>Product for Ace Project Name</description>
    <inlineHelpText>Product for Ace Project Name</inlineHelpText>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>