force-app/main/default/objects/CTA__c/fields/Product_Names__c.field-meta.xml
<CustomField>
    <fullName>Product_Names__c</fullName>
    <description>Quotation Related</description>
    <label>Product Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>