force-app/main/default/objects/CTA__c/fields/Product_Requested__c.field-meta.xml
<CustomField>
    <fullName>Product_Requested__c</fullName>
    <description>Indiamart Related</description>
    <label>Product Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>