force-app/main/default/objects/CTA__c/fields/Prospect_interest_type__c.field-meta.xml
<CustomField>
    <fullName>Prospect_interest_type__c</fullName>
    <formula>TEXT(Lead__r.Prospect_Interest_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect interest type</label>
    <type>Text</type>
</CustomField>