force-app/main/default/objects/CTA__c/fields/QUERY_MODID__c.field-meta.xml
<CustomField>
    <fullName>QUERY_MODID__c</fullName>
    <description>Indiamart Related</description>
    <label>QUERY MODID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>