force-app/main/default/objects/CTA__c/fields/QUERY_MODREFID__c.field-meta.xml
<CustomField>
    <fullName>QUERY_MODREFID__c</fullName>
    <description>Indiamart Related</description>
    <label>QUERY MODREFID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>