force-app/main/default/objects/CTA__c/fields/Quote_PDF_Link__c.field-meta.xml
<CustomField>
    <fullName>Quote_PDF_Link__c</fullName>
    <description>Quotation Related</description>
    <label>Quote PDF Link</label>
    <type>Url</type>
</CustomField>