force-app/main/default/objects/CTA__c/fields/rating_basis_purpose__c.field-meta.xml
<CustomField>
    <fullName>rating_basis_purpose__c</fullName>
    <formula>TEXT(Lead__r.Rating_Basis_Purpose__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>rating basis purpose</label>
    <type>Text</type>
</CustomField>