force-app/main/default/objects/CTA__c/fields/Rating_Custom__c.field-meta.xml
<CustomField>
    <fullName>Rating_Custom__c</fullName>
    <formula>IF(  TEXT( Customer_Contact__r.Rating_Custom__c )   &lt;&gt; Null, TEXT( Customer_Contact__r.Rating_Custom__c ),TEXT(Lead__r.Rating_Custom__c) )</formula>
    <label>Rating</label>
    <type>Text</type>
</CustomField>