force-app/main/default/objects/CTA__c/fields/Rating_IMG__c.field-meta.xml
<CustomField>
    <fullName>Rating_IMG__c</fullName>
    <formula>IF(Rating_Custom__c==&apos;Hot&apos;,IMAGE(&quot;/resource/1603896222000/Hot_Lead_IMG&quot;,&quot;Alt_IMG&quot;,20,50),
IF(Rating_Custom__c==&apos;Warm&apos;,IMAGE(&quot;/resource/1603896559000/Warm_Lead_IMG&quot;,&quot;Alt_IMG&quot;,20,35),
IF(Rating_Custom__c==&apos;Cold&apos;,IMAGE(&quot;/resource/1603894605000/Fire_Image&quot;,&quot;Alt_IMG&quot;,20,17),&apos;NA&apos;)))</formula>
    <label>Rating_IMG</label>
    <type>Text</type>
</CustomField>