force-app/main/default/objects/CTA__c/fields/Rating_Points__c.field-meta.xml
<CustomField>
    <fullName>Rating_Points__c</fullName>
    <formula>IF( Rating_Custom__c ==&apos;Hot&apos;,3, IF(Rating_Custom__c==&apos;Warm&apos;, 2, IF(Rating_Custom__c==&apos;Cold&apos;, 1, NULL) ) )</formula>
    <label>Rating Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>