force-app/main/default/objects/CTA__c/fields/READ_STATUS__c.field-meta.xml
<CustomField>
    <fullName>READ_STATUS__c</fullName>
    <description>Indiamart Related</description>
    <label>READ_STATUS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>