force-app/main/default/objects/CTA__c/fields/Reasons_for_non_delivery__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_non_delivery__c</fullName>
    <label>Reasons for non-delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out Of Delivery Area - To be delivered through alternate delivery partner</fullName>
            </value>
            <value>
                <fullName>Consignee Address Incomplete/Incorrect</fullName>
            </value>
            <value>
                <fullName>Consignee Address Unlocatable/Landmark Needed</fullName>
            </value>
            <value>
                <fullName>Consignee Not Available</fullName>
            </value>
            <value>
                <fullName>Consignee Out Of Station</fullName>
            </value>
            <value>
                <fullName>Consignee Refused To Accept</fullName>
            </value>
            <value>
                <fullName>Consignee Shifted From The Given Address</fullName>
            </value>
            <value>
                <fullName>Consignee&apos;S Address Unlocatable/Landmark Needed</fullName>
            </value>
            <value>
                <fullName>Delivery Attempted-Premises Closed</fullName>
            </value>
            <value>
                <fullName>Need Department Name/Extention Number</fullName>
            </value>
            <value>
                <fullName>No Such Consignee At The Given Address</fullName>
            </value>
            <value>
                <fullName>Out Of Delivery Area</fullName>
            </value>
            <value>
                <fullName>Out Of Delivery Area - to be delivered through India Post</fullName>
            </value>
            <value>
                <fullName>Wrong Pincode, Will Impact Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>