force-app/main/default/objects/CTA__c/fields/Reasons_for_nurturing__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_nurturing__c</fullName>
    <label>Reasons for nurturing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Satisfied with current solution</fullName>
            </value>
            <value>
                <fullName>Not the right timing</fullName>
            </value>
            <value>
                <fullName>Wrong contact person</fullName>
                <label>Not a decision maker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>